--- a/web/public/scss/_projectOverview.scss
+++ b/web/public/scss/_projectOverview.scss
@@ -57,6 +57,7 @@
             line-height: 16px;
             font-size: 12px;
             text-align: justify;
+            text-transform: initial;
         }
     }
 }
